[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["Roberto <rfelixpatron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
scipy = "^1.11.4"
joblib = "^1.3.2"
prophet = "1.1.5"
cmdstanpy = "^1.2.0"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
